--- a/.github/workflows/commit.yml
+++ b/.github/workflows/commit.yml
@@ -3,6 +3,7 @@ name: Caique Daily Commit
 on:
   schedule:
     - cron: '0 0 * * *'  # Every day at midnight UTC to runs every 7-8 min set cron to '*/1 * * * *'
+  workflow_dispatch: # This line adds the manual trigger button
 
 jobs:
   commit:
